Начало разметки личного проекта, исправление замечаний

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,8 +29,12 @@
             <section class="product-list">
                 <h1>Каталог продукции</h1>
                 <div class="product-list__item product">
+                    <a href="#">
                     <img class="product__image" src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy Pro 500 г">
+                    </a>
+                    <a href="#">
                     <p class="product__name">Cat Energy Pro 500 г</p>
+                    </a>
                     <table class="product__description">
                         <tr>
                             <td>Объем</td>
@@ -45,11 +49,15 @@
                             <td>700 Р.</td>
                         </tr>
                     </table>
-                    <button class="product__button" type="button">Заказать</button>
+                    <a class="product__button">Заказать</a>
                 </div>
                 <div class="product-list__item product">
+                    <a href="#">
                     <img class="product__image" src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy Pro 1000 г">
+                    </a>
+                    <a href="#">
                     <p class="product__name">Cat Energy Pro 1000 г</p>
+                    </a>
                     <table class="product__description">
                         <tr>
                             <td>Объем</td>
@@ -64,11 +72,15 @@
                             <td>1000 Р.</td>
                         </tr>
                     </table>
-                    <button class="product__button" type="button">Заказать</button>                                
+                    <a class="product__button">Заказать</a>                                
                 </div>
                 <div class="product-list__item product">
+                    <a href="#">
                     <img class="product__image" src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy Pro 500 г">
+                    </a>
+                    <a href="#">
                     <p class="product__name">Cat Energy Pro 500 г</p>
+                    </a>
                     <table class="product__description">
                         <tr>
                             <td>Объем</td>
@@ -83,11 +95,15 @@
                             <td>700 Р.</td>
                         </tr>
                     </table>
-                    <button class="product__button" type="button">Заказать</button>           
+                    <a class="product__button">Заказать</a>           
                 </div>
                 <div class="product-list__item product">
+                    <a href="#">
                     <img class="product__image" src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy Pro 1000 г">
+                    </a>
+                    <a href="#">
                     <p class="product__name">Cat Energy Pro 1000 г</p>
+                    </a>
                     <table class="product__description">
                         <tr>
                             <td>Объем</td>
@@ -102,11 +118,15 @@
                             <td>1000 Р.</td>
                         </tr>
                     </table>
-                    <button class="product__button" type="button">Заказать</button>           
+                    <a class="product__button">Заказать</a>           
                 </div>
                 <div class="product-list__item product">
+                    <a href="#">
                     <img class="product__image" src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy Slim 500 г">
+                    </a>
+                    <a href="#">
                     <p class="product__name">Cat Energy Slim 500 г</p>
+                    </a>
                     <table class="product__description">
                         <tr>
                             <td>Объем</td>
@@ -121,11 +141,15 @@
                             <td>400 Р.</td>
                         </tr>
                     </table>
-                    <button class="product__button" type="button">Заказать</button>           
+                    <a class="product__button">Заказать</a>           
                 </div>
                 <div class="product-list__item product">
+                    <a href="#">
                     <img class="product__image" src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy Slim 1000 г">
+                    </a>
+                    <a href="#">
                     <p class="product__name">Cat Energy Slim 1000 г</p>
+                    </a>
                     <table class="product__description">
                         <tr>
                             <td>Объем</td>
@@ -140,11 +164,15 @@
                             <td>700 Р.</td>
                         </tr>
                     </table>
-                    <button class="product__button" type="button">Заказать</button>           
+                    <a class="product__button">Заказать</a>           
                 </div>
                 <div class="product-list__item product">
+                    <a href="#">
                     <img class="product__image" src="http://placehold.it/140x144" width="140" height="144" alt="Cat Energy Slim 500 г">
+                    </a>
+                    <a href="#">
                     <p class="product__name">Cat Energy Slim 500 г</p>
+                    </a>
                     <table class="product__description">
                         <tr>
                             <td>Объем</td>
@@ -159,13 +187,13 @@
                             <td>500 Р.</td>
                         </tr>
                     </table>
-                    <button class="product__button" type="button">Заказать</button>           
+                    <a class="product__button">Заказать</a>          
                 </div>        
                 <div class="product-list__item product">
                     <span class="product__image"></span>
                     <p class="product__name">Показать еще 100500 товаров</p>
                     <p>На самом деле вкусов гараздо больше!</p>
-                    <button class="product__button--more" type="button">Показать все</button>           
+                    <a class="product__button product__button--more" href="#">Показать все</a>           
                 </div>        
             </section>
       
