--- a/source/index.html
+++ b/source/index.html
@@ -28,18 +28,20 @@
     <main class="page-main">
         <h1>Функциональное питание для котов</h1>
         <p>Занялся собой? Займись котом!</p>
-        <button class="" type="button">Подобрать программу</button>
+        <a class="" href="form.html">Подобрать программу</a>
         <section class="programs">
             <h2 class="visually-hidden">Программы питания</h2>
             <div class="programs__item">
                 <h3 class="programs__item-name">Похудение</h3>
                 <img class="programs__item-picture" src="http://placehold.it/50x50" width="50" height="50" alt="">
                 <p class="programs__item-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+                <a class="" href="#">Каталог Slim &rarr;</a>
             </div>
             <div class="programs__item">
                 <h3 class="programs__item-name">Набор массы</h3>
                 <img class="programs__item-picture" src="http://placehold.it/50x50" width="50" height="50" alt="">
                 <p class="programs__item-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+                <a class="" href="#">Каталог Pro &rarr;</a>
             </div>
         </section>
         <section class="method">
