Основное задание: начинаем вёрстку с препроцессором

--- a/source/index.html
+++ b/source/index.html
@@ -1,90 +1,99 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <header class="page-header">
-        <a class="page-header__logo">
-            <img class="page-header__logo-image" src="http://placehold.it/33x38" width="33" height="38" alt="Интернет-магазин CAT ENERGY">
-            <p class="page-header__logo-text">Cat Energy</p>
-        </a>
-        <nav class="main-nav">
-            <button class="main-nav__toggle" type="button">Открыть меню</button>
-            <ul class="main-nav__list site-list">
-                <li class="site-list__item site-list__item--active">
-                    <a>Главная</a>
-                </li>
-                <li class="site-list__item">
-                    <a href="catalog.html">Каталог продукции</a>
-                </li>
-                <li class="site-list__item">
-                    <a href="form.html">Подбор программы</a>
-                </li>
-            </ul>
-        </nav>
-    </header>  
-    <main class="page-main">
-        <h1>Функциональное питание для котов</h1>
-        <p>Занялся собой? Займись котом!</p>
-        <a class="" href="form.html">Подобрать программу</a>
-        <section class="programs">
-            <h2 class="visually-hidden">Программы питания</h2>
-            <div class="programs__item">
-                <h3 class="programs__item-name">Похудение</h3>
-                <img class="programs__item-picture" src="http://placehold.it/50x50" width="50" height="50" alt="">
-                <p class="programs__item-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-                <a class="" href="#">Каталог Slim &rarr;</a>
-            </div>
-            <div class="programs__item">
-                <h3 class="programs__item-name">Набор массы</h3>
-                <img class="programs__item-picture" src="http://placehold.it/50x50" width="50" height="50" alt="">
-                <p class="programs__item-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-                <a class="" href="#">Каталог Pro &rarr;</a>
-            </div>
-        </section>
-        <section class="method">
-            <h2>Как это работает</h2>
-            <ul class="method__list adv-list">
-                <li class="adv-list__item">
-                    <img class="adv-list__item-picture" src="http://placehold.it/60x60" width="60" height="60" alt="">
-                    <p class="adv-list__item-description">Функциональное питание содержит только полезные питательные вещества.</p>
-                </li>
-                <li class="adv-list__item">
-                    <img class="adv-list__item-picture" src="http://placehold.it/60x60" width="60" height="60" alt="">
-                    <p class="adv-list__item-description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-                </li>
-                <li class="adv-list__item">
-                    <img class="adv-list__item-picture" src="http://placehold.it/60x60" width="60" height="60" alt="">
-                    <p class="adv-list__item-description">Замените один &ndash; два приема обычной еды на наше функциональное питание.</p>
-                </li>
-                <li class="adv-list__item">
-                    <img class="adv-list__item-picture" src="http://placehold.it/60x60" width="60" height="60" alt="">
-                    <p class="adv-list__item-description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer class="page-footer">
-        <p class="page-footer__logo-text">Cat Energy</p>
-        <div class="page-footer__social social">
-            <ul class="social__list">
-                <li class="social__item">
-                    <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">ВКонтакте</a>
-                </li>
-                <li class="social__item">
-                    <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Instagram</a>
-                </li>
-                <li class="social__item">
-                    <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Facebook</a>
-                </li>           
-            </ul>
-        </div>
-        <div class="page-footer__copyright copyright">
-            <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        </div>
-    </footer>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+  <link href="css/style.css" rel="stylesheet">
+</head>
+<body>
+  <header class="page-header">
+    <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Интернет-магазин CAT ENERGY">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--active">
+          <a>Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html">Каталог продукции</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">Подбор программы</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="page-main">
+    <div class="main">
+      <h1>Функциональное питание для котов</h1>
+      <p class="main__slogan">Занялся собой? Займись котом!</p>
+      <a class="main__button" href="form.html">Подобрать программу</a>
+    </div>
+    <section class="programs">
+      <h2 class="visually-hidden">Программы питания</h2>
+      <div class="programs__item">
+        <h3 class="programs__item-name">Похудение</h3>
+        <img class="programs__item-picture" src="img/icon-cat-slim.svg" width="50" height="50" alt="">
+        <p class="programs__item-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+        <a class="programs__button" href="#">Каталог Slim &rarr;</a>
+      </div>
+      <div class="programs__item">
+        <h3 class="programs__item-name">Набор массы</h3>
+        <img class="programs__item-picture" src="img/icon-cat-pro.svg" width="50" height="50" alt="">
+        <p class="programs__item-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+        <a class="programs__button" href="#">Каталог Pro &rarr;</a>
+      </div>
+    </section>
+    <section class="method">
+      <h2>Как это работает</h2>
+      <ul class="method__list adv-list">
+        <li class="adv-list__item">
+          <img class="adv-list__item-picture" src="img/advantage-leaf@1x.png" width="50" height="50" alt="">
+          <p class="adv-list__item-description">Функциональное питание содержит только полезные питательные вещества.</p>
+        </li>
+        <li class="adv-list__item">
+          <img class="adv-list__item-picture" src="img/advantage-powder@1x.png" width="50" height="50" alt="">
+          <p class="adv-list__item-description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+        </li>
+        <li class="adv-list__item">
+          <img class="adv-list__item-picture" src="img/advantage-dining@1x.png" width="50" height="50" alt="">
+          <p class="adv-list__item-description">Замените один &ndash; два приема обычной еды на наше функциональное питание.</p>
+        </li>
+        <li class="adv-list__item">
+          <img class="adv-list__item-picture" src="img/advantage-clock@1x.png" width="50" height="50" alt="">
+          <p class="adv-list__item-description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <img src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    <div class="page-footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+            <img src="img/icon-vk-mobile.svg" width="22" height="12" alt="ВКонтакте">
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+            <img src="img/icon-insta-mobile.svg" width="16" height="16" alt="Instagram">
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+            <img src="img/icon-fb-mobile.svg" width="10" height="19" alt="Facebook">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+        <img src="img/htmlacademy.svg" width="50" height="50" alt="HTML Academy">
+      </a>
+    </div>
+  </footer>
+</body>
 </html>
