--- a/source/index.html
+++ b/source/index.html
@@ -35,13 +35,13 @@
       <h2 class="visually-hidden">Программы питания</h2>
       <div class="programs__item">
         <h3 class="programs__item-name">Похудение</h3>
-        <img class="programs__item-picture" src="img/icon-cat-slim.svg" width="50" height="50" alt="">
+        <img class="programs__item-picture" src="img/icon-cat-slim.svg" width="50" height="50" alt="Худеющий кот">
         <p class="programs__item-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
         <a class="programs__button" href="#">Каталог Slim &rarr;</a>
       </div>
       <div class="programs__item">
         <h3 class="programs__item-name">Набор массы</h3>
-        <img class="programs__item-picture" src="img/icon-cat-pro.svg" width="50" height="50" alt="">
+        <img class="programs__item-picture" src="img/icon-cat-pro.svg" width="50" height="50" alt="Кот на массе">
         <p class="programs__item-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
         <a class="programs__button" href="#">Каталог Pro &rarr;</a>
       </div>
