--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,7 @@
   <title>HTML Academy: Кэт энерджи</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
+<body class="container">
   <header class="page-header">
     <a class="page-header__logo">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Интернет-магазин CAT ENERGY">
@@ -28,177 +28,208 @@
   <main class="page-main">
     <section class="product-list">
       <h1>Каталог продукции</h1>
-      <div class="product-list__item product">
-        <a href="#">
-          <img class="product__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500 г">
+      <div class="product-list__item">
+        <a class="product-list__link" href="#">
+          <img class="product-list__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500 г">
         </a>
-        <a class="product__name" href="#">
-          <p>Cat Energy Pro 500 г</p>
-        </a>
-        <table class="product__description">
-          <tr>
-            <td>Объем</td>
-            <td>500 г</td>
-          </tr>
-          <tr>
-            <td>Вкус</td>
-            <td>Курица</td>
-          </tr>
-          <tr>
-            <td>Цена</td>
-            <td>700 Р.</td>
-          </tr>
-        </table>
-        <a class="product__button">Заказать</a>
-      </div>
-      <div class="product-list__item product">
-        <a href="#">
-            <img class="product__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г">
-        </a>
-        <a class="product__name" href="#">
-          <p>Cat Energy Pro 1000 г</p>
-        </a>
-        <table class="product__description">
-          <tr>
-            <td>Объем</td>
-            <td>1000 г</td>
-          </tr>
-          <tr>
-            <td>Вкус</td>
-            <td>Курица</td>
-          </tr>
-          <tr>
-            <td>Цена</td>
-            <td>1000 Р.</td>
-          </tr>
-        </table>
-        <a class="product__button">Заказать</a>
-      </div>
-      <div class="product-list__item product">
-        <a href="#">
-            <img class="product__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500 г">
+        <div class="product-list__item-block">
+          <a class="product-list__name" href="#">
+            <p>Cat Energy Pro 500 г</p>
           </a>
-        <a class="product__name" href="#">
-          <p>Cat Energy Pro 500 г</p>
-        </a>
-        <table class="product__description">
-          <tr>
-            <td>Объем</td>
-            <td>500 г</td>
-          </tr>
-          <tr>
-            <td>Вкус</td>
-            <td>Рыба</td>
-          </tr>
-          <tr>
-            <td>Цена</td>
-            <td>700 Р.</td>
-          </tr>
-        </table>
-        <a class="product__button">Заказать</a>
+          <table class="product-list__description">
+            <tr class="product-list__description-row">
+              <td>Объем</td>
+              <td>500 г</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Вкус</td>
+              <td>Курица</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Цена</td>
+              <td>700 Р.</td>
+            </tr>
+          </table>
+        </div>
       </div>
-      <div class="product-list__item product">
-        <a href="#">
-            <img class="product__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г">
+      <a class="product-list__button" href="#">
+        <p class="product-list__button-name">Заказать</p>
+      </a>
+      <div class="product-list__item">
+        <a class="product-list__link" href="#">
+          <img class="product-list__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г">
+        </a>
+        <div class="product-list__item-block">
+          <a class="product-list__name" href="#">
+            <p>Cat Energy Pro 1000 г</p>
           </a>
-        <a class="product__name" href="#">
-          <p>Cat Energy Pro 1000 г</p>
-        </a>
-        <table class="product__description">
-          <tr>
-            <td>Объем</td>
-            <td>1000 г</td>
-          </tr>
-          <tr>
-            <td>Вкус</td>
-            <td>Рыба</td>
-          </tr>
-          <tr>
-            <td>Цена</td>
-            <td>1000 Р.</td>
-          </tr>
-        </table>
-        <a class="product__button">Заказать</a>
+          <table class="product-list__description">
+            <tr class="product-list__description-row">
+              <td>Объем</td>
+              <td>1000 г</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Вкус</td>
+              <td>Курица</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Цена</td>
+              <td>1000 Р.</td>
+            </tr>
+          </table>
+        </div>
       </div>
-      <div class="product-list__item product">
-        <a href="#">
-            <img class="product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
+      <a class="product-list__button" href="#">
+        <p class="product-list__button-name">Заказать</p>
+      </a>
+      <div class="product-list__item">
+        <a class="product-list__link" href="#">
+          <img class="product-list__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500 г">
+        </a>
+        <div class="product-list__item-block">
+          <a class="product-list__name" href="#">
+            <p>Cat Energy Pro 500 г</p>
           </a>
-        <a class="product__name" href="#">
-          <p>Cat Energy Slim 500 г</p>
-        </a>
-        <table class="product__description">
-          <tr>
-            <td>Объем</td>
-            <td>500 г</td>
-          </tr>
-          <tr>
-            <td>Вкус</td>
-            <td>Гречка</td>
-          </tr>
-          <tr>
-            <td>Цена</td>
-            <td>400 Р.</td>
-          </tr>
-        </table>
-        <a class="product__button">Заказать</a>
+          <table class="product-list__description">
+            <tr class="product-list__description-row">
+              <td>Объем</td>
+              <td>500 г</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Вкус</td>
+              <td>Рыба</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Цена</td>
+              <td>700 Р.</td>
+            </tr>
+          </table>
+        </div>
       </div>
-      <div class="product-list__item product">
-        <a href="#">
-            <img class="product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
+      <a class="product-list__button" href="#">
+        <p class="product-list__button-name">Заказать</p>
+      </a>
+      <div class="product-list__item">
+        <a class="product-list__link" href="#">
+          <img class="product-list__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г">
+        </a>
+        <div class="product-list__item-block">
+          <a class="product-list__name" href="#">
+            <p>Cat Energy Pro 1000 г</p>
           </a>
-        <a class="product__name" href="#">
-          <p>Cat Energy Slim 1000 г</p>
-        </a>
-        <table class="product__description">
-          <tr>
-            <td>Объем</td>
-            <td>1000 г</td>
-          </tr>
-          <tr>
-            <td>Вкус</td>
-            <td>Гречка</td>
-          </tr>
-          <tr>
-            <td>Цена</td>
-            <td>700 Р.</td>
-          </tr>
-        </table>
-        <a class="product__button">Заказать</a>
+          <table class="product-list__description">
+            <tr class="product-list__description-row">
+              <td>Объем</td>
+              <td>1000 г</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Вкус</td>
+              <td>Рыба</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Цена</td>
+              <td>1000 Р.</td>
+            </tr>
+          </table>
+        </div>
       </div>
-      <div class="product-list__item product">
-        <a href="#">
-            <img class="product__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
+      <a class="product-list__button" href="#">
+        <p class="product-list__button-name">Заказать</p>
+      </a>
+      <div class="product-list__item">
+        <a class="product-list__link" href="#">
+          <img class="product-list__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
         </a>
-        <a class="product__name" href="#">
-          <p>Cat Energy Slim 500 г</p>
-        </a>
-        <table class="product__description">
-          <tr>
-            <td>Объем</td>
-            <td>500 г</td>
-          </tr>
-          <tr>
-            <td>Вкус</td>
-            <td>Рис</td>
-          </tr>
-          <tr>
-            <td>Цена</td>
-            <td>500 Р.</td>
-          </tr>
-        </table>
-        <a class="product__button">Заказать</a>
+        <div class="product-list__item-block">
+          <a class="product-list__name" href="#">
+            <p>Cat Energy Slim 500 г</p>
+          </a>
+          <table class="product-list__description">
+            <tr class="product-list__description-row">
+              <td>Объем</td>
+              <td>500 г</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Вкус</td>
+              <td>Гречка</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Цена</td>
+              <td>400 Р.</td>
+            </tr>
+          </table>
+        </div>
       </div>
-      <div class="product-list__item product">
-        <span class="product__image"></span>
-        <p class="product__name">Показать еще 100500 товаров</p>
+      <a class="product-list__button" href="#">
+        <p class="product-list__button-name">Заказать</p>
+      </a>
+      <div class="product-list__item">
+        <a class="product-list__link" href="#">
+          <img class="product-list__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
+        </a>
+        <div class="product-list__item-block">
+          <a class="product-list__name" href="#">
+            <p>Cat Energy Slim 1000 г</p>
+          </a>
+          <table class="product-list__description">
+            <tr class="product-list__description-row">
+              <td>Объем</td>
+              <td>1000 г</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Вкус</td>
+              <td>Гречка</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Цена</td>
+              <td>700 Р.</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <a class="product-list__button" href="#">
+        <p class="product-list__button-name">Заказать</p>
+      </a>
+      <div class="product-list__item">
+        <a class="product-list__link" href="#">
+          <img class="product-list__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
+        </a>
+        <div class="product-list__item-block">
+          <a class="product-list__name" href="#">
+            <p>Cat Energy Slim 500 г</p>
+          </a>
+          <table class="product-list__description">
+            <tr class="product-list__description-row">
+              <td>Объем</td>
+              <td>500 г</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Вкус</td>
+              <td>Рис</td>
+            </tr>
+            <tr class="product-list__description-row">
+              <td>Цена</td>
+              <td>500 Р.</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <a class="product-list__button" href="#">
+        <p class="product-list__button-name">Заказать</p>
+      </a>
+      <div class="product-list__item product-list__item--more">
+        <span class="product-list__image"></span>
+        <p class="product-list__name">Показать еще 100500 товаров</p>
         <p>На самом деле вкусов гораздо больше!</p>
-        <a class="product__button product__button--more" href="#">Показать все</a>
       </div>
+      <a class="product-list__button product-list__button--more" href="#">
+        <p class="product-list__button--more-name">Показать все</p>
+      </a>      
     </section>
   </main>
   <footer class="page-footer">
-    <img src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    <span class="hr"></span>
     <div class="page-footer__social social">
       <ul class="social__list">
         <li class="social__item">
@@ -218,8 +249,10 @@
         </li>
       </ul>
     </div>
+    <span class="hr"></span>
     <div class="page-footer__copyright copyright">
-      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <a class="button copyright__image" href="https://htmlacademy.ru/intensive/adaptive">
         <img src="img/htmlacademy.svg" width="50" height="50" alt="HTML Academy">
       </a>
     </div>
