--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
   <title>HTML Academy: Кэт энерджи</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
+<body class="container">
   <header class="page-header">
     <a class="page-header__logo">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Интернет-магазин CAT ENERGY">
@@ -26,7 +26,8 @@
     </nav>
   </header>
   <footer class="page-footer">
-    <img src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    <span class="hr"></span>
     <div class="page-footer__social social">
       <ul class="social__list">
         <li class="social__item">
@@ -46,8 +47,10 @@
         </li>
       </ul>
     </div>
+    <span class="hr"></span>
     <div class="page-footer__copyright copyright">
-      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <a class="button copyright__image" href="https://htmlacademy.ru/intensive/adaptive">
         <img src="img/htmlacademy.svg" width="50" height="50" alt="HTML Academy">
       </a>
     </div>
