--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <title>HTML Academy: Кэт энерджи</title>
   <link href="css/style.css" rel="stylesheet">
 </head>
-<body>
+<body class="container">
   <header class="page-header">
     <a class="page-header__logo">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="38" alt="Интернет-магазин CAT ENERGY">
@@ -29,20 +29,28 @@
     <div class="main">
       <h1>Функциональное питание для котов</h1>
       <p class="main__slogan">Занялся собой? Займись котом!</p>
-      <a class="main__button" href="form.html">Подобрать программу</a>
     </div>
+    <a class="main__button" href="form.html">
+      <p class="main__button-text">Подобрать программу</p>
+    </a>
     <section class="programs">
       <h2 class="visually-hidden">Программы питания</h2>
       <div class="programs__item">
-        <h3 class="programs__item-name">Похудение</h3>
-        <img class="programs__item-picture" src="img/icon-cat-slim.svg" width="50" height="50" alt="Худеющий кот">
+        <div class="programs__item-block">
+          <img class="programs__item-picture round" src="img/icon-cat-slim.svg" width="50" height="50" alt="Худеющий кот">
+          <h3 class="programs__item-name">Похудение</h3>
+        </div>
         <p class="programs__item-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+        <span class="hr"></span>
         <a class="programs__button" href="#">Каталог Slim &rarr;</a>
       </div>
       <div class="programs__item">
-        <h3 class="programs__item-name">Набор массы</h3>
-        <img class="programs__item-picture" src="img/icon-cat-pro.svg" width="50" height="50" alt="Кот на массе">
+        <div class="programs__item-block">
+          <img class="programs__item-picture round" src="img/icon-cat-pro.svg" width="50" height="50" alt="Кот на массе">
+          <h3 class="programs__item-name">Набор массы</h3>
+        </div>
         <p class="programs__item-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+        <span class="hr"></span>
         <a class="programs__button" href="#">Каталог Pro &rarr;</a>
       </div>
     </section>
@@ -69,7 +77,8 @@
     </section>
   </main>
   <footer class="page-footer">
-    <img src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    <img class="page-footer__logo" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+    <span class="hr"></span>
     <div class="page-footer__social social">
       <ul class="social__list">
         <li class="social__item">
@@ -89,8 +98,10 @@
         </li>
       </ul>
     </div>
+    <span class="hr"></span>
     <div class="page-footer__copyright copyright">
-      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+      <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <a class="button copyright__image" href="https://htmlacademy.ru/intensive/adaptive">
         <img src="img/htmlacademy.svg" width="50" height="50" alt="HTML Academy">
       </a>
     </div>
